# optiops

./: .gitignore  README.md  pyproject.toml
src/optops/: __init__.py
